# KnowledgeBase

./: .gitignore  README.md  Roadmap_SMS.md  ToDo.md  pyproject.toml
BPE_Tokenizer/: README.md  bpe.py
DSA/cpp/: a.out  basic_sorting.cpp  hash  hashing_basic.cpp  merge_sort.cpp  palin  palindrome.cpp  quick_sort.cpp
DSA/python/: 2nd_largest.py  LongConsec_seq.py  Subarray_with_sum_k.py  all_permutations.py  arrays.py  basic_sorting.py  next_permutation.py  sort_array_of_012.py  test.py
KnowledgeBase/: Beam_vs_greedy.md  Git.md  Transformers.md  bezos_api_mandate.md  cloud.md  fastAPI.md  hypervisors.md  lua_tutorial.md  software_dev.md  to_study.md  vim_commands.md  xen_proj_hypervisor.md
KnowledgeBase/DBaaS/: docker_manager.py  flow.md  replication_and_HA.md  temp_arch.md  to_study.md  vm_details.txt
KnowledgeBase/Golang/: Intro_lessons.md  go.mod  intro.md
KnowledgeBase/agents/: Intro.md  MCP.md  RBAC.md
KnowledgeBase/distributed_systems/: lec1.md
KnowledgeBase/docker/: docker_apnacollege.md  intro.md  part2.md
KnowledgeBase/linux/: LVM.md  boot_process.md
KnowledgeBase/log_analytics/: logAI.md
KnowledgeBase/low_level_design/: RPC.md
KnowledgeBase/pytorch/: DataLoaders_Datasets.md  Datasets.md  Tensors.md  __init__.md  torch_nn.md  torch_utils_data.md
KnowledgeBase/system_design/: REST.md  approach_SD.md  basic_SD_terminologies.md  database_indexing.md  http_and_tcp.md
Noter/: audio_processor.py  llm_factory.py  utils.py
Noter/templates/: flow.md  system_prompt.txt  (+2 more)
transcripts/: equal_collective.md  markers_test_audio.txt  test_audio.txt
(+21 files in other folders)
